# hi3516cv610_20s-demo-project

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: arm-v01c02-linux-musleabi.cmake  sdk_config.cmake
sdk/common/: sample_comm_venc.c
src/: CMakeLists.txt  app_config.h  camera_ir.c  camera_ir.h  dbg.c  dbg.h  ir_auto.c  ir_auto.h  main.c  mp4_muxer.c  mp4_muxer.h  sdk_common.h  sys_dbg.c  sys_dbg.h  sys_discovery_serv.c  sys_discovery_serv.h  sys_notify.c  sys_notify.h  sys_sd.c  sys_sd.h  sys_system.c  sys_system.h  sys_thread.c  sys_thread.h  sys_uevent.c  sys_uevent.h  venc_pipeline.c  venc_pipeline.h  video_dispatcher.c  video_dispatcher.h  video_osd.c  video_osd.h  video_pipeline.c  video_pipeline.h  video_record.c  video_record.h
tools/: sys_discovery_cli  sys_discovery_cli.c
