# ============================================================================
# Hi3516CV610 嵌入式音视频应用 - CMake 项目
# ============================================================================
cmake_minimum_required(VERSION 3.16)
project(hi3516_app LANGUAGES C CXX)

# ---- SDK 配置 (必须在定义 target 之前 include) --------------------------------
include(${CMAKE_SOURCE_DIR}/cmake/sdk_config.cmake)

# ---- 全局编译选项 -------------------------------------------------------------
add_compile_options(${HI3516_COMPILE_OPTIONS})

# ---- 全局头文件路径 -----------------------------------------------------------
include_directories(${HI3516_INCLUDE_DIRS})

# ---- 全局库搜索路径 -----------------------------------------------------------
link_directories(${SDK_OUT_LIB_DIR})

# ---- 子目录 -----------------------------------------------------------------
add_subdirectory(src)
